# oblivion-py

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_work.py
