[package]
name = "oblivion-rs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oblivion_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["serde"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = "*"
oblivion = { path = "./oblivion", features = ["python"] }
serde_json = "*"
